--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,7 @@
     console_bundles_json_url: "{{ aem_schema }}://{{ aem_host }}:{{ aem_port }}{{ url_bunldes_json }}"
     console_packages_url: "{{ aem_schema }}://{{ aem_host }}:{{ aem_port }}{{ url_packages }}"
     login_url: "{{ aem_schema }}://{{ aem_host }}:{{ aem_port }}{{ url_login }}"
-    role_comment: "( {{ role_comment | default_role_comment }} )"
+    role_comment: "( {{ role_comment | default('aem verify') }} )"
   tags:
     - aem-verify
 
