--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -1,12 +1,32 @@
 ---
 - name: Converge
-  hosts: all
+  hosts: instance
   become: true
+  vars:
+    local_role_name: "ansible-role-aem-verify"
+    role_name: "{% if lookup('env','ROLE_NAME_FULL') %}{{ lookup('env','ROLE_NAME_FULL') }}{% else %}{{ local_role_name }}{% endif %}"
 
   pre_tasks:
     - name: Update apt cache.
       apt: update_cache=yes cache_valid_time=600
       when: ansible_os_family == 'Debian'
 
+    - name: get docker host ip
+      become: yes
+      shell: |
+        set -o pipefail
+        /sbin/ip route | awk '/default/ { print $3 }'
+      args:
+        executable: /bin/bash
+      register: dockerhost_ip
+      changed_when: false
+
   roles:
-    - role: aem_design.aem_verify
+    - {
+      role: "{{ role_name }}",
+      aem_license_key: "{{ service_aem_license_key }}",
+      aem_license_name: "{{ service_aem_license_name }}",
+      aem_port: "5502",
+      aem_host: "{{ dockerhost_ip.stdout }}",
+      debug_hide: false
+    }
