--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 galaxy_info:
-  role_name: aem-verify
+  role_name: aem_verify
   author: Max Barrass
   description: Check AEM Instance is loaded
   company: aem.design
