--- a/molecule/default/coverage.yml
+++ b/molecule/default/coverage.yml
@@ -18,17 +18,15 @@
       changed_when: false
 
   roles:
-    - {
-      role: "aem_design.aem_license",
-      aem_license_key: "{{ service_aem_license_key }}",
-      aem_license_name: "{{ service_aem_license_name }}",
-      aem_port: "5502",
-      aem_host: "{{ dockerhost_ip.stdout }}",
-      debug_hide: false
-    }
-    - {
-      role: "{{ role_name }}",
-      aem_port: "5502",
-      aem_host: "{{ dockerhost_ip.stdout }}",
-      debug_hide: false
-    }
+    - role: "aem_design.aem_license"
+      vars:
+        aem_license_key: "{{ service_aem_license_key }}"
+        aem_license_name: "{{ service_aem_license_name }}"
+        aem_port: "5502"
+        aem_host: "{{ dockerhost_ip.stdout }}"
+        debug_hide: false
+    - role: "{{ role_name }}"
+      vars:
+        aem_port: "5502"
+        aem_host: "{{ dockerhost_ip.stdout }}"
+        debug_hide: false
