--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,17 +3,17 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
-  options:
-    config-file: molecule/default/yaml-lint.yml
+lint: |
+  set -e
+  yamllint .
+  ansible-lint .
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
   playbooks:
     prepare: prepare.yml
-    converge: ${MOLECULE_PLAYBOOK:-playbook.yml}
+    converge: ${MOLECULE_PLAYBOOK:-coverage.yml}
   inventory:
     group_vars:
       all:
@@ -42,8 +42,6 @@ platforms:
       AEM_RUNMODE: "-Dsling.run.modes=author,crx3,crx3tar,dev"
     pre_build_image: true
     privileged: true
-scenario:
-  name: default
 verifier:
   name: testinfra
   lint:
