--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,12 +3,10 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint: |
-  set -e
-  yamllint .
-  ansible-lint .
 provisioner:
   name: ansible
+  lint:
+    name: ansible-lint
   playbooks:
     prepare: prepare.yml
     converge: ${MOLECULE_PLAYBOOK:-coverage.yml}
