add missign dep.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           pip3 install --upgrade pip
           pip3 install --ignore-installed PyYAML
-          pip3 install testinfra molecule docker molecule-docker yamllint flake8 ansible
+          pip3 install testinfra molecule docker molecule-docker yamllint flake8 ansible ansible-lint
 
       - name: Lint
         run: |
